--- a/style.css
+++ b/style.css
@@ -10,13 +10,18 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: seagreen;
+    background: url(bg\ image.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .contianer {
     width: 420px;
-    background: purple;
+    background: transparent;
     color: #fff;
+    border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 10px;
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     padding: 30px 40px;
 
 }
